fix grey color to be visible in dark mode

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -27,7 +27,7 @@
   overflow: hidden;
 }
 .grey-color {
-  color: #222;
+  color: #868e96;
 }
 
 .header li a {
